# xbot-ros

./: .dockerignore  .env  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md
.github/workflows/: build-image.yaml
devenv/: .gitignore  Dockerfile  additional-apt-packages.txt  attach.sh  docker-compose.yaml  entrypoint.sh  start_devenv.sh  start_teleop.sh
devenv-robot/: Dockerfile  additional-apt-packages.txt  docker-compose.yaml  entrypoint.sh  start_devenv.sh
docker/: Dockerfile  additional-apt-packages.txt  entrypoint.sh
docker/assets/: 02-ros.sh
src/xbot-comms/: CMakeLists.txt  package.xml
src/xbot-comms/ext/service-definitions/: bumper_service.json  input_service.json  service_ids.h
src/xbot-comms/src/: diff_drive_service_interface.hpp  imu_service_interface.cpp  imu_service_interface.h  xbot-comms.cpp  xbot_comms_node.cpp  xbot_comms_node.h
src/xbot-ros/: CMakeLists.txt  package.xml
src/xbot-ros/src/: ImuServiceInterface.cpp  ImuServiceInterface.h  testnode.cpp
src/xbot_comms/: CMakeLists.txt  package.xml
src/xbot_comms/ext/service-definitions/: diff_drive_service.json  emergency_service.json  input_service.json  power_service.json  service_ids.h
src/xbot_comms/src/: diff_drive_service_interface.cpp  diff_drive_service_interface.hpp  imu_service_interface.cpp  imu_service_interface.h  xbot-comms.cpp  xbot_comms_node.cpp  xbot_comms_node.h
src/xbot_example/: CMakeLists.txt  package.xml
src/xbot_example/config/: xbot_cartographer_2d.lua
src/xbot_example/launch/: cartographer_launch.py  rplidar_launch.py  teleop_launch.py  urdf_launch.py  xbot_base_launch.py  xbot_example_launch.py
src/xbot_example/urdf/: xbot.urdf
src/xbot_utils/: CMakeLists.txt  README.md  package.xml
src/xbot_utils/include/xbot_utils/: scan_to_pointcloud.hpp
src/xbot_utils/launch/: scan_to_pointcloud.launch.py
src/xbot_utils/src/: scan_to_pointcloud.cpp  scan_to_pointcloud_node.cpp
