<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xbot_example</name>
  <version>0.0.0</version>
  <description>Basic Comms for the xbot robot</description>
  <maintainer email="post@x-tech.online">x-tech UG</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <exec_depend>xbot-comms</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>joy_teleop</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
</package>
